<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ParametersSetupActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background_layout_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/game_end_layout_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_background_text"
            android:layout_margin="4dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/grass_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grass_radio_text"
                android:onClick="onGrassClick" />

            <RadioButton
                android:id="@+id/hard_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_radio_text"
                android:onClick="onGrassClick" />

            <RadioButton
                android:id="@+id/indoor_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indoor_radio_text"
                android:onClick="onGrassClick" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_end_layout_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/speed_layout_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_layout_id">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_game_end_condition_text"
            android:layout_margin="4dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/goals_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goals_radio_text"
                android:onClick="onGoalsClick"
                android:padding="4dp"/>

            <RadioButton
                android:id="@+id/time_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_radio_text"
                android:onClick="onTimeClick"
                android:padding="4dp" />

        </RadioGroup>

        <EditText
            android:id="@+id/edit_text_parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_goals_time_hint"
            android:layout_margin="4dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed_layout_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/controls_parameters_layout_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_end_layout_id">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_ball_speed_text"
            android:layout_margin="8dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ball_slow_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slow_radio_text"
                android:onClick="onSlowBallClick" />

            <RadioButton
                android:id="@+id/ball_medium__radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_radio_text"
                android:onClick="onMediumSpeedBallClick" />

            <RadioButton
                android:id="@+id/ball_fast__radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_radio_text"
                android:onClick="onFastBallClick" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_disks_speed_text"
            android:layout_margin="8dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/disk_slow__radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slow_radio_text"
                android:onClick="onSlowDisksClick" />

            <RadioButton
                android:id="@+id/disk_medium_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_radio_text"
                android:onClick="onMediumSpeedDisksClick" />

            <RadioButton
                android:id="@+id/disk_fast_radio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_radio_text"
                android:onClick="onFastDisksClick" />

        </RadioGroup>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/controls_parameters_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_layout_id"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/accept_changes_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change"
            android:onClick="onChangeClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/discard_changes_button_id"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/discard_changes_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Discard"
            android:onClick="onDiscardClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/accept_changes_button_id"
            app:layout_constraintRight_toLeftOf="@id/default_button_id"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/default_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Default"
            android:onClick="onDefaultClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/discard_changes_button_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>