<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PreGameActivity">

    <LinearLayout
        android:id="@+id/users_layout_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/left_edit_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_player_name_text"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/left_list_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/right_edit_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guest_player_name_text"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/right_list_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttons_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/users_layout_id">

        <Button
            android:id="@+id/start_game_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game_button_text"
            android:onClick="onStartGameClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cancel_game_button_id"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_game_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_game_button_id"
            android:onClick="onCancelGameClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/start_game_button_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>