<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FaceToFaceStatisticsActivity">

    <LinearLayout
        android:id="@+id/face_to_face_statistics_layout_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/face_to_face_victory_count_layout_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/face_to_face_statistics_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_to_face_statistics_banner"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/face_to_face_statistics_list_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/face_to_face_statistics_list_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/face_to_face_statistics_text_view_id">


        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/face_to_face_victory_count_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="face_to_face_statistics_menu_layout_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/face_to_face_statistics_layout_id">

        <TextView
            android:id="@+id/face_to_face_users_name_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/face_to_face_users_result_text_view_id"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/face_to_face_users_result_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_face_to_face_result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/face_to_face_users_name_text_view_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/face_to_face_statistics_menu_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/face_to_face_victory_count_layout_id">

        <Button
            android:id="@+id/face_to_face_back_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_to_face_back_button_id"
            android:onClick="onFaceToFaceBackClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/face_to_face_reset_button_id"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/face_to_face_reset_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_to_face_reset_button_id"
            android:onClick="onFaceToFaceResetClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/face_to_face_back_button_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>